2008-09-06  Nicolas François  <nicolas.francois@centraliens.net>

	* src/userdel.c, src/newusers.c, src/chpasswd.c, src/chfn.c,
	src/groupmems.c, src/usermod.c, src/groupdel.c, src/chgpasswd.c,
	src/useradd.c, src/groupmod.c, src/groupadd.c, src/chage.c,
	src/chsh.c: Simplify the PAM error handling. Do not keep the pamh
	handle, but terminate the PAM transaction as soon as possible if
	there are no PAM session opened.

2008-09-06  Nicolas François  <nicolas.francois@centraliens.net>

	* src/newgrp.c, src/userdel.c, src/grpck.c, src/gpasswd.c,
	src/newusers.c, src/pwconv.c, src/chpasswd.c, src/logoutd.c,
	src/chfn.c, src/groupmems.c, src/usermod.c, src/pwunconv.c,
	src/expiry.c, src/groupdel.c, src/chgpasswd.c, src/useradd.c,
	src/su.c, src/groupmod.c, src/passwd.c, src/pwck.c,
	src/groupadd.c, src/chage.c, src/login.c, src/grpconv.c,
	src/groups.c, src/grpunconv.c, src/chsh.c: Prog is now global (not
	static to the file) so that it can be used by the helper functions
	of libmisc.
	* lib/prototypes.h: Added extern char *Prog.
	* libmisc/find_new_gid.c, libmisc/find_new_uid.c: Indicate the
	program name with the warning.

2008-09-05  Nicolas François  <nicolas.francois@centraliens.net>

	* configure.in: Check if AUDIT_ADD_USER, AUDIT_DEL_USER,
	AUDIT_ADD_GROUP, and AUDIT_DEL_GROUP are defined in <libaudit.h>.

2008-09-04  Nicolas François  <nicolas.francois@centraliens.net>

	* src/useradd.c: Fix comment of lflg: it is also used for faillog.

2008-09-04  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/groupmems.c, man/groupmems.8.xml: Document the long
	options.

2008-09-03  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/prototypes.h, libmisc/audit_help.c: Define new type
	shadow_audit_result for the result argument of audit_logger().
	This permits stronger type checking and a better readability of
	the results (SHADOW_AUDIT_FAILURE/SHADOW_AUDIT_SUCCESS constants).
	* src/groupadd.c, src/groupdel.c, src/useradd.c, src/userdel.c: