@@ -4,8 +4,6 @@
 #ifndef _DEFINES_H_
 #define _DEFINES_H_
 
-#include <config.h>
-
 #if HAVE_STDBOOL_H
 # include <stdbool.h>
 #else
